--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-:D
+<!DOCTYPE html> 
+
+<html>
+    <head>
+        <title> CSCI255 Homework Website</title>
+    </head>
+    <body>  
+
+        <p>My first assignment is done.</p>
+
+    </body>
+</html>
