--- a/index.html
+++ b/index.html
@@ -2,11 +2,106 @@
 
 <html>
     <head>
-        <title> CSCI255 Homework Website</title>
+        <title> CSCI255 Homework Website of Jacob Boyette</title>
     </head>
     <body>  
 
-        <p>My first assignment is done.</p>
+        <div class="navbar"></div>
+        <ul>
+            <li> <a href="https://www.usca.edu"> Link to USCA Website</a> </li>
+        </ul>
+        <p>Webpage Sections</p>
+        <ul>
+            <li> <a href="#assignment">Assignment Section</a></li>
+            <li> <a href="#portfolio">Portfolio Section</a></li>
+            <li> <a href="#contact">Contact Information Section</a></li>
+            <li> <a href="#schedule">Schedule</a></li>
+        </ul>
+            
 
+
+        </div>
+        <div class="introduction">
+            <h1>Introduction!</h1>
+            <p>My name is Jacob Boyette and I am a senior at USCA this year. I'm studying computer science and I want to 
+                work in cybsecurity! I love video games, my dog Jasper, traveling, and food. I put a picture of my doggy below.
+                <img src="img/IMG_7314.JPG"> 
+            </p>
+        </div>
+        <div class="assignment" id="assignment">
+            <h1>Assignment</h1>
+            <ol>
+                <li>Assignment 1</li>
+                <ul>
+                    <li><a href="doc/Assignment1.pdf">Assignment1.pdf</a></li>
+                </ul>
+            </ol>
+        </div>
+        <div class="portfolio" id="portfolio">
+            <h1>Portfolio</h1>
+            <p>
+                This is where I would put more projects as I work on them.
+            </p>
+        </div>
+        <div class="address" id="contact">
+            <h1>Contact Information</h1>
+            <p>
+                Email: boyetten@usca.edu
+            </p>
+            <p>
+                School: University of South Carolina Aiken 
+            </p>
+        </div>
+        <div class="schedule" id="schedule">
+            <h1>Schedule</h1>
+            <p>
+               <table border="1">
+                <tr>
+                    <th> <!--Leave Blank--> </th>
+                    <th>Monday</th>
+                    <th>Tuesday</th>
+                    <th>Wednesday</th>
+                    <th>Thursday</th>
+                    <th>Friday</th>
+                </tr>
+                <tr>
+                    <th>12:00 - 1:30</th>
+                    <td>CSCI255 Web Development</td>
+                    <td></td>
+                    <td>CSCI225 Web Development</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th>1:30 - 3:00</th>
+                    <td>CSCIA220 Data Structures</td>
+                    <td></td>
+                    <td>CSCIA220 Data Structures</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th>3:00 - 4:30</th>
+                    <td>MATHA344 Linear Algebra</td>
+                    <td></td>
+                    <td>MATHA344 Linear Algebra</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th>4:30 - 6:00</th>
+                    <td></td>
+                    <td>CSCIA340 Mobile Application Development</td>
+                    <td></td>
+                    <td>CSCIA340 Mobile Application Development</td>
+                    <td></td>
+                <tr>
+                    <th>Online</th>
+                    <td colspan="5">CSCIA275 Physics Engine Integration</td>
+                </tr>
+               </table> 
+            </p>
+        </div>
+        <footer>&#169 Jacob Boyette. All rights reserved</footer>
     </body>
 </html>
