--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title> CSCI255 Homework Website of Jacob Boyette</title>
+        <title> CSCI255 Homework Website of <b>Jacob Boyette/<b>/title>
     </head>
     <body>  
 
@@ -24,7 +24,7 @@
         <div class="introduction">
             <h1>Introduction!</h1>
             <p>My name is Jacob Boyette and I am a senior at USCA this year. I'm studying computer science and I want to 
-                work in cybsecurity! I love video games, my dog Jasper, traveling, and food. I put a picture of my doggy below.
+                work in cybsecurity! I love video games, my dog Jasper, traveling, and food. <em>I put a picture of my doggy below.</em>
                 <img src="img/IMG_7314.JPG"> 
             </p>
         </div>
@@ -33,7 +33,7 @@
             <ol>
                 <li>Assignment 1</li>
                 <ul>
-                    <li><a href="doc/Assignment1.pdf">Assignment1.pdf</a></li>
+                    <li><a href="doc/Assignment1.pdf"><sub>Assignment1.pdf</sub></a></li>
                 </ul>
             </ol>
         </div>
