--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title> CSCI255 Homework Website of <b>Jacob Boyette/<b>/title>
+        <title> CSCI255 Homework Website of <b>Jacob Boyette</b><title>
     </head>
     <body>  
 
