--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title> CSCI255 Homework Website of <b>Jacob Boyette</b> </title>
+        <title> CSCI255 Homework Website of Jacob Boyette </title>
     </head>
     <body>  
 
@@ -23,8 +23,9 @@
         </div>
         <div class="introduction">
             <h1>Introduction!</h1>
-            <p>My name is Jacob Boyette and I am a senior at USCA this year. I'm studying computer science and I want to 
-                work in cybsecurity! I love video games, my dog Jasper, traveling, and food. <em>I put a picture of my doggy below.</em>
+            <p>My name is <b>Jacob Boyette</b> and I am a senior at USCA this year. I'm studying computer science and I want to 
+                work in cybsecurity! I love video games, my dog Jasper, traveling, and food. 
+                <br> <em>I put a picture of my doggy below.</em>
                 <img src="img/IMG_7314.JPG"> 
             </p>
         </div>
