--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p>My name is <b>Jacob Boyette</b> and I am a senior at USCA this year. I'm studying computer science and I want to 
                 work in cybsecurity! I love video games, my dog Jasper, traveling, and food. 
                 <br> <em>I put a picture of my doggy below.</em>
-                <img src="img/IMG_7314.JPG"> 
+                <br> <img src="img/IMG_7314.JPG"> 
             </p>
         </div>
         <div class="assignment" id="assignment">
