--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
             <li> <a href="#contact">Contact Information Section</a></li>
             <li> <a href="#schedule">Schedule</a></li>
         </ul>
-            
-
-
-        </div>
+        
         <div class="introduction">
             <h1>Introduction!</h1>
             <p>My name is <b>Jacob Boyette</b> and I am a senior at USCA this year. I'm studying computer science and I want to 
@@ -103,6 +100,6 @@
                </table> 
             </p>
         </div>
-        <footer>&#169 Jacob Boyette. All rights reserved</footer>
+        <footer>&#169; Jacob Boyette. All rights reserved</footer>
     </body>
 </html>
