--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                 <ul>
                     <li><a href="doc/Assignment1.pdf"><sub>Assignment1.pdf</sub></a></li>
                 </ul>
+                <li> Contact Me </li>
+                <ul>
+                    <li><a href="doc/ContactMe.html">ContactMe</a></li>
+                </ul>
             </ol>
         </div>
         <div class="portfolio" id="portfolio">
