--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 <ul>
                     <li><a href="doc/Assignment1.pdf"><sub>Assignment1.pdf</sub></a></li>
                 </ul>
-                <li> Contact Me </li>
+                <li> Assignment 2 </li>
                 <ul>
-                    <li><a href="doc/ContactMe.html">ContactMe</a></li>
+                    <li><a href="doc/ContactMe.html">Contact Me</a></li>
                 </ul>
             </ol>
         </div>
