--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
             <li> <a href="https://www.usca.edu"> Link to USCA Website</a> </li>
         </ul>
+        <iframe width="300" height="115" src="https://www.youtube.com/embed/29XymHesxa0?si=xMSl9LbCQim-cGNz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <p>Webpage Sections</p>
         <ul>
             <li> <a href="#assignment">Assignment Section</a></li>
